# tensorneat-torch

./: .gitignore  README.md  pyproject.toml
examples/func_fit/: custom_func_fit.py  xor.py  xor_hyperneat_feedforward.py  xor_recurrent.py
examples/profiling/: bench_xor_hyperneat.py  profile_xor_hyperneat.py
examples/rl/: gymnasium_cartpole.py  mock_target_tracking.py
src/tensorneat/: __init__.py  pipeline.py
src/tensorneat/algorithm/: __init__.py  base.py
src/tensorneat/algorithm/hyperneat/: __init__.py  hyperneat.py  hyperneat_feedforward.py
src/tensorneat/algorithm/hyperneat/substrate/: __init__.py  base.py  default.py  full.py  mlp.py
src/tensorneat/algorithm/neat/: __init__.py  neat.py  species.py
src/tensorneat/common/: __init__.py  graph.py  state.py  stateful_class.py  tools.py
src/tensorneat/common/functions/: __init__.py  act_sympy.py  act_torch.py  agg_sympy.py  agg_torch.py  manager.py
src/tensorneat/genome/: __init__.py  base.py  default.py  recurrent.py  utils.py
src/tensorneat/genome/gene/: __init__.py  base.py
src/tensorneat/genome/gene/conn/: __init__.py  base.py  default.py  origin.py
src/tensorneat/genome/gene/node/: __init__.py  base.py  bias.py  default.py  origin.py
src/tensorneat/genome/operations/: __init__.py
src/tensorneat/problem/: __init__.py  base.py
src/tensorneat/problem/func_fit/: __init__.py  custom.py  func_fit.py  xor.py  xor3d.py
src/tensorneat/problem/rl/: __init__.py  gymnasium.py  mock.py  rl_env.py
tests/: test_genome_operations.py  test_hyperneat.py  test_neat_pipeline.py  test_rl_problem.py
(+10 files in other folders)
